log/build_2025-02-27_18-15-50/ar_slam_base/stderr.log
  File "/home/GTL/apaul/ros2_hw1/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base/mapping_kf.py", line 129
    H[0:2;j:j+2]=Rteta
         ^
SyntaxError: invalid syntax

